deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: fe
  namespace: default
  labels:
    app: fe
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fe
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe
  namespace: default
spec:
  selector:
    matchLabels:
      app: fe   
  replicas: 1
  template:
    metadata:
      labels:
        app: fe
    spec:
      serviceAccountName: fe-sa
      containers:
      - name: myapp-container
        image: salrashid123/istioclient@sha256:8c7cd52bf9943b2d24ecfcd8fa014e3fe3ad879ca1fb6a354f822fde9adabd6b
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080   
---
apiVersion: v1
kind: Service
metadata:
  name: fe2
  namespace: default
  labels:
    app: fe2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fe2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe2
  namespace: default
spec:
  selector:
    matchLabels:
      app: fe2  
  replicas: 1
  template:
    metadata:
      labels:
        app: fe2
    spec:
      serviceAccountName: fe2-sa
      containers:
      - name: myapp-container
        image: salrashid123/istioclient@sha256:8c7cd52bf9943b2d24ecfcd8fa014e3fe3ad879ca1fb6a354f822fde9adabd6b
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080   
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: www-googleapis-se
  namespace: default
spec:
  hosts:
  - www.googleapis.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: www-googleapis-ext
  namespace: default
spec:
  hosts:
  - www.googleapis.com
  tls:
  - match:
    - port: 443
      sniHosts:
      - www.googleapis.com
    route:
    - destination:
        host: www.googleapis.com
        port:
          number: 443
      weight: 100
